[gd_scene load_steps=7 format=3 uid="uid://b4ubvn1dao4y2"]

[ext_resource type="Texture2D" uid="uid://c5g64ba64ox45" path="res://assets/Tiny Swords (Update 010)/Deco/03.png" id="1_bi8ia"]
[ext_resource type="Script" path="res://scenes/health_pickup.gd" id="1_xctcu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7vnsh"]
atlas = ExtResource("1_bi8ia")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_aei7q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vnsh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pdvrh"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tap7t"]
radius = 20.0

[node name="health_pickup" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_xctcu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 2)
sprite_frames = SubResource("SpriteFrames_aei7q")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_pdvrh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_tap7t")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
